
v1.20
    Public Release 20
    2015-
    - Fixed error preventing Panel options from saving properly.
    - Fixed a bug where Panels were following the Waypoints blacklist.
    - Fixed a display issue when setting HUDTracker Icon mode to none.
    - Improved tooltips for some of the tracker options.

v1.19
    Public Release 19
    2014-12-10
    - Fixed two errors related to the HUDTracker, caused by changes in a recent patch.
    - Fixed a missing options label.

v1.18
    Public Release 18
    2014-10-11
    - Added "Sin View" HUDTracker visibility choice.
    - Switched to using HUDManager for determining whether or not to display HUD elements.
    - Fixed an issue that caused the HUDTracker to impede the usage of other UI elements despite not having any loot in it.
    - Improved behavior of Panels when toggling the feature on and off, creating and removing panels for existing loot.
    - Reimplemenated the battleframe icon display on Panels. When not applicable, it will display an icon indicative of the category of the loot instead.
    - Lowered default Tracker Delay, increased default Tracker Limit to accommodate for the new Pinata Frenzy event.

v1.17
    Public Release 17
    2014-09-17
    - Rewrote the HUDTracker's update function, making it more efficient than before. This should result in a noticeable performance improvement during larger fights. As a side effect, the HUDTracker Update Interval and Minimum Update Delay options were rendered meaningless, and have been removed. 
    - Added the ability to append an item link to the chat input from the HUDTracker entries' right-click context menu.
    - Added Waypoint Icon Glow options (requires that you have UI Glow Effects enabled in the game Video settings).
    - Improved behaviour of Waypoints when toggling the feature on and off. It will now clear Waypoints when it is disabled, and create Waypoints for existing loot when enabled.