@@ -48,10 +48,17 @@
     </Textures>
     
     <Colors>
-        <Color name="textColor"     value="#FFFFFF"/>
-        <Color name="RowDefault"    value="#000000"/>
-        <Color name="RowHover"      value="#0E89C7"/>
-        <Color name="RowSelected"    value="#0F23C7"/>
+        <Color name="textColor"            value="#FFFFFF"/>
+        <Color name="RowDefault"           value="#000000"/>
+        <Color name="RowHover"             value="#0E89C7"/>
+        <Color name="RowSelected"          value="#0F23C7"/>
+
+        <Color name="ScopeRowHoverText"    value="#FF9900"/>
+        <Color name="ScopeRowSelectedText" value="#FFAA00"/>
+        <Color name="ScopeRowDefaultText"  value="#FFFFFF"/>
+
+
+
     </Colors>
 
     <Styles>
@@ -140,7 +147,10 @@
             color:FFFFFF;
         </StyleSheet>
 
-
+        <StyleSheet name="FadedBorder" parent="ButtonSolid">
+            tint:#121318;
+            exposure:1.0;
+        </StyleSheet>
     </Styles>
     
     <BluePrints>
@@ -155,7 +165,7 @@
         
     
         <!-- Filtering UI -->
-        <BluePrint name="Panel" >
+        <BluePrint name="Panel" instantiable="true">
             <Border dimensions="dock:fill" class="PanelBackDrop" />
         </BluePrint>
 
@@ -180,28 +190,48 @@
 
         <BluePrint name="BlacklistRow" instantiable="true">
                 <StillArt name="bg" dimensions="dock:fill" style="texture:colors; tint:RowDefault; region:white; alpha:0.4;"/>
+                <FocusBox name="focusBox"   dimensions="dock:fill"/>
                 <Group name="content" dimensions="dock:fill">
-                    <Group name="icon" dimensions="left:0; top:0; height:100%; width:10%-4"/>
-                    <Group name="name" dimensions="left:20%; top:0; height:100%; width:20%-4"/>
-                    <Group name="typeid" dimensions="left:40%; top:0; height:100%; width:15%-4"/>
-                    <Group name="actions" dimensions="left:55%; top:0; height:100%; width:20%-4"/>
+                    <Group name="icon" dimensions="left:0; top:0; height:100%; width:64" style="fixed-bounds:true;"/>
+                    <Group name="name" dimensions="left:68; top:0; height:100%; width:20%-4"/>
+                    <Group name="typeid" dimensions="left:20%+68; top:0; height:100%; width:15%-4"/>
+                    <Group name="actions" dimensions="left:45%+68; top:0; height:100%; width:20%-4">
+                        <Group name="removeButton" dimensions="left:10; width:42; top:9.5%; height:40"/>
+                    </Group>
                 </Group>
-                <FocusBox name="focusBox"   dimensions="dock:fill" />
         </BluePrint>
 
         <BluePrint name="RowField" instantiable="true">
-            <StillArt name="bg" dimensions="dock:fill" style="texture:colors; tint:#ff000000; region:white; alpha:0.2;"/>
-            <Text    name="text"   key="WINDOW_TITE"  dimensions="dock:fill" class="FilterRowText" />
+            <StillArt name="bg" dimensions="dock:fill" style="texture:colors; tint:#ff000000; region:white; alpha:0;"/>
+            <Text    name="text"   dimensions="dock:fill" class="FilterRowText" />
         </BluePrint>
     
         <BluePrint name="BlacklistScopeButton" instantiable="true">
             <StillArt name="bg"         dimensions="dock:fill" style="texture:colors; tint:#ff000000; region:white; alpha:0.6;"/>
             <Text     name="text"       dimensions="top:35%;left:0;bottom:40%;right:100%;" class="FilteringUI_BlacklistScope"/>
-            <FocusBox name="focusBox"   dimensions="dock:fill" />
+            <FocusBox name="focusBox"   dimensions="dock:fill"/>
         </BluePrint>
+
+    
+        <BluePrint name="FilledButtonPrint" instantiable="true">
+            <Border name="outer" dimensions="dock:fill" class="FadedBorder" style="eatsmice:false; padding:5; exposure:.25; tint:394042"/>
+            <Group name="icon" dimensions="dock:fill" style="eatsmice:false"/>
+            <FocusBox name="focus" dimensions="dock:fill" style="cursor:sys_hand"/>
+        </BluePrint>
+
+        <BluePrint name="TabPanelLayout_Main" instantiable="true">
+            <Group name="LeftColumn" dimensions="left:0; top:0; height:100%; width:25%;" blueprint="Panel" style="alpha:1">
+            </Group>
+            <Group name="MainArea" dimensions="left:25%+1; top:0; height:100%; width:75%;" blueprint="Panel" style="tint:F94042">
+                <Group name="FilterList" dimensions="width:100%;height:100%-68;top:68;"/>
+            </Group>
+        </BluePrint>
+
 
     </BluePrints>
 
+
+    
     <Frames>
         <!-- Tracker -->
         <PanelFrame name="Tracker" dimensions="left:0; right:50%-450; height:150; center-y:74%;" permanent="true" visible="true" depth="10">
@@ -237,16 +267,7 @@
                     <!-- Body -->
                     <Group dimensions="left:0; top:40; height:100%; width:100%">                        
                         <Group dimensions="left:0; top:0; height:100%; width:100%" blueprint="Panel">
-                            <Group id="Tabs" dimensions="left:0; top:0; bottom:45; right:100%"/>
-                            <Group id="Body" dimensions="left:0; top:45; bottom:100%; right:100%">
-                                <Group id="LeftColumn" dimensions="left:0; top:0; height:100%; width:25%;" blueprint="Panel" style="alpha:1">
-                                    <Group id="ButtonAdd" dimensions="right:50%-5; top:0%+9; height:24; width:120"/>
-                                    <Group id="ButtonDel" dimensions="right:50%-5; top:0%+38; height:24; width:120"/>
-                                </Group>
-                                <Group id="MainArea" dimensions="left:25%+1; top:0; height:100%; width:75%;" blueprint="Panel">
-                                    <Group id="FilterList" dimensions="dock:fill;"/>
-                                </Group>
-                            </Group>
+                            <Group id="Panes" dimensions="left:0; top:0; bottom:100%; right:100%"/>
                         </Group>
                     </Group>
                 </Group>
